-------------------------------------------------------------------------------
Changes in version 0.91

- Fixed some minor bugs in command-line and environment handling.

- Fixed a bug in socket handling that caused timeouts to be set too low.

- Fixed an iobuf bug that caused opened output files to not be closed on
  errors.
-------------------------------------------------------------------------------
Changes in version 0.9

- Fixed bug in EOF handling when storing files.

- IP addresses in PORT commands that do not match the remote IP address
  are now rejected.
-------------------------------------------------------------------------------
Changes in version 0.8

- Use glob library to handle wildcard handling.  This means twoftpd can
  now handle listing patterns like "test*/*".

- Apply timeouts on all socket handling routines.

- Dropped use of sendfile on Linux, since it's incompatible with
  handling timeouts on sending or receiving data.
-------------------------------------------------------------------------------
Changes in version 0.7

- Fixed a bug that caused PORT-style connections to fail.
-------------------------------------------------------------------------------
Changes in version 0.6

- Can now handle LIST and NLST on non-directories.

- Should now automatically use sendfile on Linux systems.

- Can now handle ASCII mode file transfers.

- Can now handle RNFR/RNTO file renaming commands.

- Can now handle newlines (octal 012) in paths.
-------------------------------------------------------------------------------
Changes in version 0.5

- TwoFTPd now uses CVM (http://em.ca/~bruceg/cvm/) for authentication.

- twoftpd-auth needs to have the anonymous configuration parameters set
  by environment variables instead of reading them through getpwnam.
-------------------------------------------------------------------------------
Changes in version 0.4

- Now handles timout when making PORT connections.
